--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Icons and Manifest -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Meta Basics -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>198e4da9-5762-4655-aa0b-cdb0b6f40a92</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>EBP Platform</title>
+    <meta name="description" content="Youth Platform" />
+    <meta name="author" content="Youth" />
+    <meta name="keywords" content="Youth, Platform, Community, EBP" />
 
-    <meta property="og:title" content="198e4da9-5762-4655-aa0b-cdb0b6f40a92" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph (Social Sharing) -->
+    <meta property="og:title" content="EBP Platform" />
+    <meta property="og:description" content="Youth Platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://yourdomain.com" />
 
+    <!-- Twitter Card -->
+    <meta name="twitter:title" content="EBP Platform" />
+    <meta name="twitter:description" content="Youth Platform" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:url" content="https://yourdomain.com" />
   </head>
 
   <body>
