Update OG metadata and logo reference

--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
 
     <!-- Open Graph (Social Sharing) -->
     <meta property="og:title" content="EBP Platform" />
-    <meta property="og:description" content="Youth Platform" />
+    <meta property="og:description" content="Empowering Youth Through Opportunities" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://ebp-app.com/assets/ebp-logo.png" />
+    <meta property="og:url" content="https://ebp-app.com" />
+
 
     <!-- Twitter Card -->
     <meta name="twitter:title" content="EBP Platform" />
-    <meta name="twitter:description" content="Youth Platform" />
+    <meta name="twitter:description" content="Empowering Youth Through Opportunities" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta name="twitter:url" content="https://yourdomain.com" />
+    <meta name="twitter:site" content="@EBPYouth" />
+    <meta name="twitter:image" content="https://ebp-app.com/assets/ebp-logo.png" />
+    <meta name="twitter:url" content="https://ebp-app.com" />
+
   </head>
 
   <body>
